[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/enemydiagonal.gd" type="Script" id=1]
[ext_resource path="res://sprites/New Piskel-1.png.png" type="Texture" id=2]
[ext_resource path="res://sprites/New Piskel-2.png.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.8027, 28.1175 )

[node name="enemydiagonal" type="KinematicBody2D"]
modulate = Color( 0.172549, 0, 1, 1 )
position = Vector2( 0, 10 )
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )

[node name="enemydiagonalsprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="enemydiagonalcollision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="enemydiagonal_raycastright" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 40, 0 )
collision_mask = 4

[node name="enemydiagonal_raycastleft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -40, 0 )
collision_mask = 4

[node name="eneymdiagonal_raycastup" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -45 )
collision_mask = 4

[node name="eneymdiagonal_raycastdown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 45 )
collision_mask = 4

